# chatsparty

./: .flake8  .gitattributes  .gitignore  LICENSE  MCP_AGENT_INTEGRATION_GUIDE.md  MCP_INTEGRATION_PLAN.md  MCP_SETUP_GUIDE.md  PROJECT_VM_IMPLEMENTATION_PLAN.md  PROJECT_VM_IMPLEMENTATION_STATUS.md  README.md  REMOTE_MCP_EXAMPLES.md  package-lock.json  package.json  test_mcp_integration.py  test_socketio.py  turbo.json
backend/: .dockerignore  .env  .env.example  .env.test  .flake8  .gitignore  Dockerfile  MIGRATION_GUIDE.md  Makefile  README.md  check_dead_code.py  debug_agents.py  debug_mcp_init.py  dev_server.py  eslint.config.js  jest.config.js  main.py  manage_cloud_db.sh  manage_db.py  manage_storage.py  nodemon.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run-tests.sh  run_dev.py  seed_model_costs.py  simple_main.py  start_dev.sh  test_api_mcp.py  test_db_connection.py  test_ide_implementation.py  test_mcp_connection.py  test_server.py  test_vm_providers.py  tsconfig.json  yoyo.ini
backend/alembic/: env.py
backend/alembic/versions/: 141ad96aa492_update_timestamps_to_use_default_.py  23539da85f87_add_podcast_jobs_table.py  3a51617df8e0_add_sample_voice_connections_for_testing.py  5afcb91c1d73_add_is_default_column_to_connections.py  6c4579ea9b50_add_users_table_for_authentication.py  7c581ebfe622_hotfix_add_api_key_encrypted_column.py  81b321a41741_add_projects_and_project_files_tables.py  845b3fc1d3f7_add_user_relationships_to_agents_.py  8958bc9e02d2_add_voice_connections_and_agent_voice_.py  8f1059a1231c_add_credit_system_tables.py  90afbd927e2a_initial_migration.py  92b7e77fc54e_add_connections_table.py  946675892296_add_mcp_tools_to_agents.py  96e25e8bce70_add_encryption_support_to_connections_.py  a786426adfc4_update_default_credits_to_10000.py  add_gender_and_language_fields.py  add_project_instructions.py  ec969bd67c78_remove_e2b_add_docker_container.py  ecc14aa388c1_add_mcp_support_to_connections.py  fd531aae229f_rename_metadata_field_in_credit_.py
backend/app/: main.py
backend/app/core/: config.py  database.py  error_handler.py
backend/app/middleware/: credit_middleware.py
backend/app/models/: auth.py  chat.py  credit.py  database.py  voice.py
backend/app/routers/: audio_test.py  auth.py  chat.py  chat_socketio.py  connections.py  credit.py  files.py  health.py  mcp.py  (+7 more)
backend/migrations/: 20250701_120952_initial_migration.py  20250701_121501_add_indexes.py  20250705_sqlmodel_column_rename.py
backend/prisma/: schema.prisma  seed-marketplace.ts
backend/scripts/: switch-ai-provider.sh
backend/src/: app.ts
backend/testing_framework/: QUICK_START.md  README.md  SOLO_DEVELOPER_GUIDE.md  test_base.py  test_config.py  test_runner.py  test_websocket_events.html
backend/tests/: test_api_route.py  test_integration.py  test_project_endpoint.py  test_stateless_mcp.py  test_workflow.py
(+695 files in other folders)
