[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.5",
    "litellm>=1.72.6",
    "ollama>=0.5.1",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.2.19",
    "python-dotenv>=1.1.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0", 
    "pydantic-settings>=2.0.0",
    "greenlet>=3.0.0",
]
